--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-parcelize'
+    id('androidx.navigation.safeargs.kotlin')
     id 'kotlin-kapt'
 }
 
@@ -39,6 +40,7 @@ android {
 
     }
 }
+
 
 dependencies {
 
