--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0"
+//        classpath 'com.android.tools.build:gradle:7.0.4'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+//        classpath "com.squareup:javapoet:1.13.0"
+    }
+}
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
