--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,26 +6,31 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KonsinyasiApp"
         tools:targetApi="31">
         <activity
-            android:label="Setting"
-            android:name=".setting.SettingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".sharedPreferences.FormUserPreferenceActivity"
+            android:name=".SplashScreenActivity"
             android:exported="true"
-            android:theme="@style/Theme.KonsinyasiApp.NoActionBar">
+            android:theme="@style/FullScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+        <activity
+            android:name=".setting.SettingActivity"
+            android:exported="false"
+            android:label="Setting" />
+        <activity
+            android:name=".sharedPreferences.FormUserPreferenceActivity"
+            android:exported="false"
+            android:theme="@style/Theme.KonsinyasiApp.NoActionBar" />
+
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
